fix: top ordered menu 수정
각 메뉴별로 count가 누적되도록 수정

--- a/orders/templates/admin/orders_dashboard.html
+++ b/orders/templates/admin/orders_dashboard.html
@@ -109,9 +109,9 @@
                     menuCard.innerHTML = `
                         <div class="card bg-light border-0 shadow">
                             <div class="card-body">
-                                <h5>${menu.menu_item.name.name}</h5>
-                                <p class="mb-0">Korean Name: ${menu.menu_item.name.food_name_ko}</p>
-                                <p class="mb-0">Order Count: ${menu.menu_item.name.count}</p>
+                                <h5>${menu.menu_item.name}</h5>
+                                <p class="mb-0">Korean Name: ${menu.food_name_ko}</p>
+                                <p class="mb-0">Order Count: ${menu.count}</p>
                             </div>
                         </div>
                     `;
