--- a/orders/templates/orders/mainpage.html
+++ b/orders/templates/orders/mainpage.html
@@ -55,7 +55,7 @@
             {% endif %}
 
             <li class="nav-item">
-                <a class="btn btn-outline-light btn-lg mx-2" href="/admin/">대시보드</a>
+                <a class="btn btn-outline-light btn-lg mx-2" href="/orders/dashboard/">대시보드</a>
             </li>
             <li class="nav-item">
                 <a class="btn btn-outline-light btn-lg mx-2" href="/orders/start_order/">주문하기</a>
