fix: 추천 메뉴 2, 3번째가 장바구니에 담기지 않는 오류 수정
- cart.js의 addItem() 코드 수정해 개선

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -357,14 +357,10 @@
 
             menuData.forEach((menu, index) => {
               const menuItem = `
-                    <div class="recommendation" onclick="addItem"('${
-                      menu.food_name
-                    }', ${menu.price}, '${menu.img_url}', ${1})">
+                    <div class="recommendation" onclick="addItem('${menu.food_name}', '${menu.price}', '${menu.img_url}')">
                         <h2>${menu.food_name}</h2>
                         <div class="menu-image">
-                            <img src="${menu.img_url}" alt="${
-                menu.food_name
-              } 이미지">
+                            <img src="${menu.img_url}" alt="${menu.food_name} 이미지">
                         </div>
                         <p>${menu.price}원</p>
                     </div>
