fix: 장바구니 음성 추가 db 오류 개선

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -462,7 +462,9 @@
               )
               .then(function (response) {
                 const result = response.data.result;
+                cart = response.data.cart_items;
                 if (result == 1) {
+                  submitOrder();
                   triggerProceedToPay();
                 } else if (
                   response.data.responseText &&
